--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://www.onepg.com">PRAZO</a>
+                <a class="navbar-brand" href="http://www.prazo.in">PRAZO</a>
             </div>
 
             <div class="collapse navbar-collapse" id="navigation-example">
@@ -67,6 +67,11 @@
                                 </a>
                             </li>
                             <li>
+                                    <a href="#ownapg">
+                                        Own a PG
+                                    </a>
+                                </li>
+                            <li>
                                 <a href="#ownapg">
                                     Rent / Lease a PG
                                 </a>
@@ -76,11 +81,24 @@
                         </ul>
                     </li>
 
-                    <li>
-                        <a href="#ownapg">
-                            Own a PG
-                        </a>
-                    </li>
+                    <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="material-icons">tag_faces</i> Clients
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu dropdown-with-icons">
+                                <li>
+                                    <a href="vsrpage.html">
+                                       VSR Stay Inn
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="vsrpage.html">
+                                       Naga Chaitanya PG
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                     <li>
                         <a href="#pricing">
                             Pricing
@@ -106,7 +124,7 @@
         <div class="col-md-12">
             <div class="card card-plain">
                 <div class="card-image">
-                    <img src="assets/img/examples/home/prazo_5.png" />
+                    <img src="assets/img/examples/home/prazo_8.png" />
                 </div>
             </div>
         </div>
@@ -121,10 +139,10 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2 class="title">About Prazo</h2>
 
-                        <!-- <div class="col-md-12">
+                        <div class="col-md-12">
                             <img class="img-rounded img-responsive img-raised mb-5" alt="Raised Image"
-                                src="assets/img/examples/home/prazo_4.png">
-                        </div> -->
+                                src="assets/img/examples/home/prazo_1.png">
+                        </div>
                         <h5 class="description">Prazo helps PG owners to run their operations very easily and
                             effectively. We have a platform using which every activity can be performed and monitored.
                             Our application has following features
@@ -280,9 +298,9 @@
 
                 </div>
 
-                <hr />
+                <!-- <hr /> -->
 
-                <div class="row" id="ownapg">
+                <!-- <div class="row" id="ownapg">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <h2 class="title">PG Partner Investment</h2>
                         <h5 class="description">If you want to invest in a PG from home,
@@ -351,7 +369,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
             </div>
         </div>
@@ -657,10 +675,11 @@
                             </div>
                             <div class="description">
                                 <h4 class="info-title">Find us at the office</h4>
-                                <p> Building No: 1 H/S No : 3,<br />
+                                <p><h6> Building No: 1 H/S No : 3,<br />
                                     Mr. Nagaraj Building Near Infosys Gate-6, <br />
                                     Agrahara Electronic City Phase-1 <br />
                                     Banglore-560100
+                                </h6>
                                 </p>
                             </div>
                         </div>
@@ -670,10 +689,10 @@
                             </div>
                             <div class="description">
                                 <h4 class="info-title">Give us a ring</h4>
-                                <p> Venky<br>
-                                    +91 9980567777<br />
-                                    +91 9632788889 <br />
-                                    +91 9182224942
+                                <p> <h6>Venky</h6>
+                                    <h6>+91 9980567777</h6>
+                                    <h6>+91 9632788889</h6>
+                                    <h6>+91 9182224942</h6>
                                 </p>
                             </div>
                         </div>
