Changes Version 3 Pending login

--- a/client-brindavan.html
+++ b/client-brindavan.html
@@ -79,33 +79,38 @@
 						</a>
 						<ul class="dropdown-menu dropdown-with-icons">
 							<li>
-								<a href="#.html">
+								<a href="client-vsr.html">
 									VSR Stay Inn
 								</a>
 							</li>
 							<li>
-								<a href="#.html">
+								<a href="client-nagac.html">
 									Naga Chaitanya PG
 								</a>
+							</li>
+							<li>
+								<a href="client-brindavan.html"">
+										Brindavan PG
+									</a>
 							</li>
 						</ul>
 					</li>
 					<li>
-						<a href="index.html#pricing">
-							Pricing
-						</a>
-					</li>
-					<li>
-						<a href="index.html#contactus">
-							<i class="material-icons">mail</i>Contact Us
-						</a>
-					</li>
-					<li class="button-container">
-						<a href="login.html">
-							<i class="material-icons">account_circle</i> Login
-						</a>
-					</li>
-				</ul>
+						<a href=" index.html#pricing">
+									Pricing
+								</a>
+							</li>
+							<li>
+								<a href="index.html#contactus">
+									<i class="material-icons">mail</i>Contact Us
+								</a>
+							</li>
+							<li class="button-container">
+								<a href="login.html">
+									<i class="material-icons">account_circle</i> Login
+								</a>
+							</li>
+						</ul>
 			</div>
 		</div>
 	</nav>
@@ -130,44 +135,47 @@
 					<div class="col-md-8 col-sm-8">
 						<div class="tab-content">
 							<div class="tab-pane" id="product-page1">
-								<img src="assets/img/examples/pg/1.jpg" />
+								<img src="assets/img/examples/pg/brundavan/1.jpg" />
 							</div>
 							<div class="tab-pane active" id="product-page2">
-								<img src="assets/img/examples/pg/2.jpg" />
+								<img src="assets/img/examples/pg/brundavan/2.jpg" />
 							</div>
 							<div class="tab-pane" id="product-page3">
-								<img src="assets/img/examples/pg/6.jpg" />
+								<img src="assets/img/examples/pg/brundavan/3.jpg" />
 							</div>
 							<div class="tab-pane" id="product-page4">
-								<img src="assets/img/examples/pg/5.jpg" />
+								<img src="assets/img/examples/pg/brundavan/4.jpg" />
 							</div>
 						</div>
 						<ul class="nav flexi-nav" role="tablist" id="flexiselDemo1">
 							<li>
 								<a href="#product-page1" role="tab" data-toggle="tab" aria-expanded="false">
-									<img src="assets/img/examples/pg/1.jpg" />
+									<img src="assets/img/examples/pg/brundavan/1.jpg" />
 								</a>
 							</li>
 							<li class="active">
 								<a href="#product-page2" role="tab" data-toggle="tab" aria-expanded="false">
-									<img src="assets/img/examples/pg/2.jpg" />
+									<img src="assets/img/examples/pg/brundavan/2.jpg" />
 								</a>
 							</li>
 							<li>
 								<a href="#product-page3" role="tab" data-toggle="tab" aria-expanded="false">
-									<img src="assets/img/examples/pg/5.jpg" />
+									<img src="assets/img/examples/pg/brundavan/3.jpg" />
 								</a>
 							</li>
 							<li>
 								<a href="#product-page4" role="tab" data-toggle="tab" aria-expanded="true">
-									<img src="assets/img/examples/pg/6.jpg" />
+									<img src="assets/img/examples/pg/brundavan/4.jpg" />
 								</a>
 							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-4">
-						<h2 class="title"> VSR Stay Inn</h2>
-						<h3 class="main-price">Electronic City, Banglore</h3>
+						<h2 class="title"> Brindavan PG</h2>
+						<h7 class="">Building No: 1 H/S No : 3, Mr. Nagaraj Building
+							Near Infosys Gate-6, Konapana Agrahara
+							Electronic City Phase-1
+							Banglore-560100</h7>
 						<div id="acordeon">
 							<div class="panel-group" id="accordion">
 								<div class="panel panel-border panel-default">
@@ -198,14 +206,28 @@
 									</div>
 									<div id="collapseTwo" class="panel-collapse collapse">
 										<div class="panel-body">
-											<ul>
-												<li>Storm and midnight-blue stretch cotton-blend</li>
-												<li>Notch lapels, functioning buttoned cuffs, two front flap pockets,
-													single vent, internal pocket</li>
-												<li>Two button fastening</li>
-												<li>84% cotton, 14% nylon, 2% elastane</li>
-												<li>Dry clean</li>
-											</ul>
+											<div class="row">
+												<div class="col-md-6">
+													<ul>
+														<li>Wifi</li>
+														<li>Gym</li>
+														<li>Power Backup</li>
+														<li>Washing Machine</li>
+														<li>Refrigerator</li>
+													</ul>
+												</div>
+												<div class="col-md-6">
+													<ul>
+														<li>CCTV</li>
+														<li>Self Cooking</li>
+														<li>Micro Wave Oven</li>
+														<li>Hot Water</li>
+														<li>Aqua Guard</li>
+													</ul>
+												</div>
+
+											</div>
+
 										</div>
 									</div>
 								</div>
@@ -221,14 +243,20 @@
 									</div>
 									<div id="collapseThree" class="panel-collapse collapse">
 										<div class="panel-body">
-											<ul>
-												<li>Storm and midnight-blue stretch cotton-blend</li>
-												<li>Notch lapels, functioning buttoned cuffs, two front flap pockets,
-													single vent, internal pocket</li>
-												<li>Two button fastening</li>
-												<li>84% cotton, 14% nylon, 2% elastane</li>
-												<li>Dry clean</li>
-											</ul>
+											<div class="row">
+												<div class="col-md-6">
+													<ul>
+														<li>1 Sharing - <strong>8500</strong></li>
+														<li>2 Sharing - <strong>7500</strong></li>
+													</ul>
+												</div>
+												<div class="col-md-6">
+													<ul>
+														<li>3 Sharing - <strong>6500</strong></li>
+														<li>4 Sharing - <strong>6000</strong></li>
+													</ul>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
