--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                                 </a>
                             </li>
                             <li>
-                                    <a href="#ownapg">
-                                        Own a PG
-                                    </a>
-                                </li>
+                                <a href="#ownapg">
+                                    Own a PG
+                                </a>
+                            </li>
                             <li>
                                 <a href="#ownapg">
                                     Rent / Lease a PG
@@ -82,23 +82,28 @@
                     </li>
 
                     <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="material-icons">tag_faces</i> Clients
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu dropdown-with-icons">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="material-icons">tag_faces</i> Clients
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu dropdown-with-icons">
                                 <li>
-                                    <a href="vsrpage.html">
-                                       VSR Stay Inn
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="vsrpage.html">
-                                       Naga Chaitanya PG
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
+                                        <a href="client-vsr.html">
+                                            VSR Stay Inn
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="client-nagac.html">
+                                            Naga Chaitanya PG
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="client-brindavan.html"">
+                                                Brindavan PG
+                                            </a>
+                                    </li>
+                        </ul>
+                    </li>
                     <li>
                         <a href="#pricing">
                             Pricing
@@ -231,29 +236,24 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <h2 class="title">All in One PG Management Platfrom</h2>
-                        <h5 class="description">A secure online tool using which PG owners can manage all
-                            functionalities of a PG.</h5>
+                        <h3 class="">A secure online tool using which PG owners can manage all
+                            functionalities of a PG.</h3>
                         <div class="section-space"></div>
                     </div>
                 </div>
 
                 <div class="row">
-
                     <div class="col-md-5 col-md-offset-1">
-                        <div class="card card-background"
-                            style="background-image: url('assets/img/examples/card-project2.jpg')">
-                            <a href="#pablo">
-
-                            </a>
-                            <div class="card-content">
-                                <label class="label label-rose">Interface: Desktop</label>
-                                <a href="#pablo">
-                                    <h3 class="card-title">PG Genie</h3>
-                                </a>
-                                <p class="card-description">
-                                    Every functionality at your finger tips
-                                </p>
+                        <div class="card card-plain">
+                            <div class="card-image">
+                                <img src="assets/img/examples/home/dashboard_cond.jpg" />
                             </div>
+                        </div>
+                        <div class="card-content" style="text-align:center">
+                            <label class="label label-rose">Interface: Desktop</label>
+                            <a href="#pablo">
+                                <h3 class="card-title">Prazo Platform</h3>
+                            </a>
                         </div>
                     </div>
 
@@ -668,18 +668,19 @@
                 <div class="row">
                     <div class="col-md-5">
                         <h2 class="title">Get in Touch</h2>
-                        <h5 class="description">You need more information? We are happy to assist you anytime.</h5>
+                        <!-- <h5 class="description">You need more information? We are happy to assist you anytime.</h5> -->
                         <div class="info info-horizontal">
                             <div class="icon icon-primary">
                                 <i class="material-icons">pin_drop</i>
                             </div>
                             <div class="description">
                                 <h4 class="info-title">Find us at the office</h4>
-                                <p><h6> Building No: 1 H/S No : 3,<br />
-                                    Mr. Nagaraj Building Near Infosys Gate-6, <br />
-                                    Agrahara Electronic City Phase-1 <br />
-                                    Banglore-560100
-                                </h6>
+                                <p>
+                                    <h6> Building No: 1 H/S No : 3,<br />
+                                        Mr. Nagaraj Building Near Infosys Gate-6, <br />
+                                        Agrahara Electronic City Phase-1 <br />
+                                        Banglore-560100
+                                    </h6>
                                 </p>
                             </div>
                         </div>
@@ -689,10 +690,21 @@
                             </div>
                             <div class="description">
                                 <h4 class="info-title">Give us a ring</h4>
-                                <p> <h6>Venky</h6>
+                                <p>
                                     <h6>+91 9980567777</h6>
                                     <h6>+91 9632788889</h6>
                                     <h6>+91 9182224942</h6>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="info info-horizontal">
+                            <div class="icon icon-primary">
+                                <i class="material-icons">mail</i>
+                            </div>
+                            <div class="description">
+                                <h4 class="info-title">Drop a mail</h4>
+                                <p>
+                                    <h6>team@prazo.in</h6>
                                 </p>
                             </div>
                         </div>
