--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
 					<div class="card card-signup">
-						<form class="form" method="" action="">
+						<form class="form" onsubmit="event.preventDefault();">
 							<div class="header header-primary text-center">
 								<h4 class="card-title">Log in</h4>
 								<div class="social-line">
@@ -96,7 +96,9 @@
 								</div> -->
 							</div>
 							<div class="footer text-center">
-								<a href="#pablo" class="btn btn-primary btn-simple btn-wd btn-lg">Proceed</a>
+								<!-- <a href="#pablo" id="" class="btn btn-primary btn-simple btn-wd btn-lg">Proceed</a> -->
+								<button id="submitbutton"
+									class="btn btn-primary btn-simple btn-wd btn-lg">Proceed</button>
 							</div>
 						</form>
 					</div>
@@ -157,5 +159,23 @@
 
 <!--    Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc    -->
 <script src="assets/js/material-kit.js?v=1.3.0" type="text/javascript"></script>
+
+<script type="text/javascript">
+	$(document).ready(function () {
+		$("#submitbutton").click(function () {
+			alert("Login under maintenance. Will be back shortly");
+			$.post("http://dummy.restapiexample.com/api/v1/create",
+				{
+					employee_name: "Donald Duck",
+					salary: "Duckburg",
+					age: "29"
+				},
+				function (data, status) {
+					//alert("Data: " + data + "\nStatus: " + status);
+				});
+		});
+
+	});
+</script>
 
 </html>
